--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="title">
             <div class="title-left">
-                <h1>The website is awesome</h1>
+                <h1>This website is awesome</h1>
                 <p>This is a simple description of what the site does.</p>
                 <button class="signup">Sign Up</button>
             </div>
@@ -76,7 +76,7 @@
         </div>
 
         <div class="footer">
-            <p>Copyright (c) The Odin Project 2021.</p>
+            <p>Copyright © The Odin Project 2021.</p>
         </div>
 
     </div>
