--- a/index.html
+++ b/index.html
@@ -15,26 +15,28 @@
         <div class="header">
             <div class="header-left"><strong>Header Logo</strong></div>
             <div class="header-right">
-                <a href="#">Header link one</a>
-                <a href="#">Header link two</a>
-                <a href="#">Header link three</a>
+                <a href="#">Link one</a>
+                <a href="#">Link two</a>
+                <a href="#">Link three</a>
             </div>
         </div>
 
         <div class="title">
-            <div class="title-left">
-                <h1>This website is awesome</h1>
-                <p>This is a simple description of what the site does.</p>
-                <button class="signup">Sign Up</button>
-            </div>
-            <div class="title-right">
-                <div class="image">Image Placeholder</div>
+            <div class="title-inner">
+                <div class="title-left">
+                    <h1>This website is awesome</h1>
+                    <p>This is a simple description of what the site does.</p>
+                    <button class="signup">Sign Up</button>
+                </div>
+                <div class="title-right">
+                    <div class="image">Image Placeholder</div>
+                </div>
             </div>
         </div>
 
         <div class="content">
             <div class="content-inner">
-                <h2>Some random info</h2>
+                <h2>Some random information</h2>
                 <div class="info-boxes">
                     <div class="info-item">
                         <div class="info-box"></div>
@@ -66,8 +68,8 @@
         <div class="popup">
             <div class="popup-box">
                 <div class="popup-left">
-                    <h3>Call to action</h3>
-                    <p>Sign up now to get started!</p>
+                    <h3>Call to action! Its's time!</h3>
+                    <p>Sign up for our product by clicking that button right over there!</p>
                 </div>
                 <div class="popup-right">
                     <button class="signup-filled">Sign Up</button>
